--- a/src/main/resources/reportes/maquinarias.jrxml
+++ b/src/main/resources/reportes/maquinarias.jrxml
@@ -1,269 +1,62 @@
 <!-- Created with Jaspersoft Studio version 7.0.1.final using JasperReports Library version 7.0.1-573496633c2b4074e32f433154b543003f7d2498  -->
-<jasperReport name="clientes" language="java" pageWidth="842" pageHeight="595" orientation="Landscape" whenNoDataType="AllSectionsNoDetail" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="c368610e-5bee-4e75-8f1e-ecda64380534" floatColumnFooter="true">
-	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="47"/>
-	<property name="ireport.y" value="451"/>
-	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="MachMillenium"/>
-	<style name="Title" forecolor="#FFFFFF" fontName="Times New Roman" fontSize="50.0" bold="false"/>
-	<style name="SubTitle" forecolor="#666666" fontName="Times New Roman" fontSize="18.0" bold="false"/>
-	<style name="Column header" forecolor="#666666" fontName="Times New Roman" fontSize="14.0" bold="true"/>
-	<style name="Detail" mode="Transparent" fontName="Times New Roman"/>
-	<style name="Row" mode="Transparent" fontName="Times New Roman" pdfFontName="Times-Roman">
-		<conditionalStyle mode="Opaque" backcolor="#F0EFEF">
-			<conditionExpression><![CDATA[$V{REPORT_COUNT}%2 == 0]]></conditionExpression>
-		</conditionalStyle>
-	</style>
-	<style name="Table_TH" mode="Opaque" backcolor="#C3D9D9">
-		<box>
-			<pen lineWidth="0.5" lineColor="#000000"/>
-			<topPen lineWidth="0.5" lineColor="#000000"/>
-			<leftPen lineWidth="0.5" lineColor="#000000"/>
-			<bottomPen lineWidth="0.5" lineColor="#000000"/>
-			<rightPen lineWidth="0.5" lineColor="#000000"/>
-		</box>
-	</style>
-	<style name="Table_CH" mode="Opaque" backcolor="#E6FFFF">
-		<box>
-			<pen lineWidth="0.5" lineColor="#000000"/>
-			<topPen lineWidth="0.5" lineColor="#000000"/>
-			<leftPen lineWidth="0.5" lineColor="#000000"/>
-			<bottomPen lineWidth="0.5" lineColor="#000000"/>
-			<rightPen lineWidth="0.5" lineColor="#000000"/>
-		</box>
-	</style>
-	<style name="Table_TD" mode="Opaque" backcolor="#FFFFFF">
-		<box>
-			<pen lineWidth="0.5" lineColor="#000000"/>
-			<topPen lineWidth="0.5" lineColor="#000000"/>
-			<leftPen lineWidth="0.5" lineColor="#000000"/>
-			<bottomPen lineWidth="0.5" lineColor="#000000"/>
-			<rightPen lineWidth="0.5" lineColor="#000000"/>
-		</box>
-	</style>
-	<dataset name="clientes" uuid="c5804f93-de10-49df-89c8-b8065722443e">
-		<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
-		<property name="com.jaspersoft.studio.data.defaultdataadapter" value="MachMillenium"/>
-		<query language="SQL"><![CDATA[SELECT
-	m.nombre,
-	m.tiempoEstimadoDeUso,
-	m.costoPorTiempoDeUso,
-	m.costoTotal, t.nombre as tipo, m.creado, m.modificado
-FROM
-	public.maquinarias m
-LEFT JOIN public.tipo_maquinaria t ON t.id = m.tipo_maquinaria_id;]]></query>
-		<field name="nombre" class="java.lang.String">
-			<property name="com.jaspersoft.studio.field.name" value="nombre"/>
-			<property name="com.jaspersoft.studio.field.label" value="nombre"/>
-			<property name="com.jaspersoft.studio.field.tree.path" value="maquinarias"/>
-		</field>
-		<field name="tiempoestimadodeuso" class="java.math.BigDecimal">
-			<property name="com.jaspersoft.studio.field.name" value="tiempoestimadodeuso"/>
-			<property name="com.jaspersoft.studio.field.label" value="tiempoestimadodeuso"/>
-			<property name="com.jaspersoft.studio.field.tree.path" value="maquinarias"/>
-		</field>
-		<field name="costoportiempodeuso" class="java.lang.Double">
-			<property name="com.jaspersoft.studio.field.name" value="costoportiempodeuso"/>
-			<property name="com.jaspersoft.studio.field.label" value="costoportiempodeuso"/>
-			<property name="com.jaspersoft.studio.field.tree.path" value="maquinarias"/>
-		</field>
-		<field name="costototal" class="java.lang.Double">
-			<property name="com.jaspersoft.studio.field.name" value="costototal"/>
-			<property name="com.jaspersoft.studio.field.label" value="costototal"/>
-			<property name="com.jaspersoft.studio.field.tree.path" value="maquinarias"/>
-		</field>
-		<field name="tipo" class="java.lang.String">
-			<property name="com.jaspersoft.studio.field.name" value="tipo"/>
-			<property name="com.jaspersoft.studio.field.label" value="tipo"/>
-			<property name="com.jaspersoft.studio.field.tree.path" value="tipo_maquinaria"/>
-		</field>
-		<field name="creado" class="java.sql.Timestamp">
-			<property name="com.jaspersoft.studio.field.name" value="creado"/>
-			<property name="com.jaspersoft.studio.field.label" value="creado"/>
-			<property name="com.jaspersoft.studio.field.tree.path" value="maquinarias"/>
-		</field>
-		<field name="modificado" class="java.sql.Timestamp">
-			<property name="com.jaspersoft.studio.field.name" value="modificado"/>
-			<property name="com.jaspersoft.studio.field.label" value="modificado"/>
-			<property name="com.jaspersoft.studio.field.tree.path" value="maquinarias"/>
-		</field>
-	</dataset>
-	<dataset name="clientesBarra" uuid="6d2bb222-f287-4372-9ccf-324d948f3bf6">
-		<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
-		<property name="com.jaspersoft.studio.data.defaultdataadapter" value="MachMillenium"/>
-		<query language="SQL"><![CDATA[SELECT t.nombre AS nombre, COUNT(*) AS cantidad FROM public.maquinarias m
-LEFT JOIN public.tipo_maquinaria t ON t.id = m.tipo_maquinaria_id
-GROUP BY t.nombre;]]></query>
-		<field name="nombre" class="java.lang.String">
-			<property name="com.jaspersoft.studio.field.name" value="nombre"/>
-			<property name="com.jaspersoft.studio.field.label" value="nombre"/>
-			<property name="com.jaspersoft.studio.field.tree.path" value="tipo_maquinaria"/>
-		</field>
-		<field name="cantidad" class="java.lang.Long">
-			<property name="com.jaspersoft.studio.field.name" value="cantidad"/>
-			<property name="com.jaspersoft.studio.field.label" value="cantidad"/>
-		</field>
-	</dataset>
-	<query language="sql"><![CDATA[]]></query>
-	<background height="555" splitType="Stretch">
-		<element kind="component" uuid="4e3387e5-dab9-43a7-9cce-20aea11f2724" x="2" y="120" width="538" height="435">
-			<component kind="table">
-				<datasetRun uuid="43638acd-5631-417d-b9c6-9f48db6e53ad" subDataset="clientes">
-					<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
-				</datasetRun>
-				<column kind="single" uuid="c0ec2be6-f51b-41ab-a800-e4b4fabb1c27" width="70">
-					<tableHeader height="30" rowSpan="1" style="Table_TH">
-						<element kind="staticText" uuid="6101c0b7-d4ea-4b1d-9601-67c7bd5ae862" x="0" y="0" width="70" height="30">
-							<text><![CDATA[Nombre]]></text>
-						</element>
-					</tableHeader>
-					<detailCell height="30" style="Table_TD">
-						<element kind="textField" uuid="ed99e088-c5d6-42e7-a932-29093cd7a2c5" x="0" y="0" width="70" height="30">
-							<expression><![CDATA[$F{nombre}]]></expression>
-						</element>
-					</detailCell>
-					<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column1"/>
-				</column>
-				<column kind="single" uuid="d83fb044-db93-4749-95b2-fe76db692870" width="80">
-					<tableHeader height="30" rowSpan="1" style="Table_TH">
-						<element kind="staticText" uuid="f7c7d37b-6c5f-4d13-9e48-0ed5c0191796" x="0" y="0" width="80" height="30">
-							<text><![CDATA[Tiempo estimado de uso]]></text>
-						</element>
-					</tableHeader>
-					<detailCell height="30" style="Table_TD">
-						<element kind="textField" uuid="8582727d-489e-46f5-8c42-1f2c165e1811" x="0" y="0" width="80" height="30">
-							<expression><![CDATA[$F{tiempoestimadodeuso}]]></expression>
-						</element>
-					</detailCell>
-					<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column2"/>
-				</column>
-				<column kind="single" uuid="11ac7901-77a4-40b7-a7dc-27064cb507b9" width="70">
-					<tableHeader height="30" rowSpan="1" style="Table_TH">
-						<element kind="staticText" uuid="40a51323-89f7-4a63-a4bb-767398c4e2a2" x="0" y="0" width="70" height="30">
-							<text><![CDATA[Costo por tiempo de uso]]></text>
-						</element>
-					</tableHeader>
-					<detailCell height="30" style="Table_TD">
-						<element kind="textField" uuid="8ffc762b-1ada-4d2d-9c1c-93839d27f386" x="0" y="0" width="70" height="30">
-							<expression><![CDATA[$F{costoportiempodeuso}]]></expression>
-						</element>
-					</detailCell>
-					<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column3"/>
-				</column>
-				<column kind="single" uuid="9fec77f2-7de8-48c8-8560-d7b3887ad74b" width="80">
-					<tableHeader height="30" rowSpan="1" style="Table_TH">
-						<element kind="staticText" uuid="fa18e1c2-3fcd-4461-ba63-3a9adee29bef" x="0" y="0" width="80" height="30">
-							<text><![CDATA[Costo total]]></text>
-						</element>
-					</tableHeader>
-					<detailCell height="30" style="Table_TD">
-						<element kind="textField" uuid="16c82d7a-6489-46e8-a112-9a5b7af4195c" x="0" y="0" width="80" height="30">
-							<expression><![CDATA[$F{costototal}]]></expression>
-						</element>
-					</detailCell>
-					<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column4"/>
-				</column>
-				<column kind="single" uuid="f92665f1-1f79-48d5-8239-b5446cea3379" width="80">
-					<tableHeader height="30" rowSpan="1" style="Table_TH">
-						<element kind="staticText" uuid="1b454e10-6d01-4bb4-b070-95fcecc98305" x="0" y="0" width="80" height="30">
-							<text><![CDATA[Tipo De maquinaria]]></text>
-						</element>
-					</tableHeader>
-					<detailCell height="30" style="Table_TD">
-						<element kind="textField" uuid="4b12bd2e-4ef2-4919-9dc6-ad605272542f" x="0" y="0" width="80" height="30">
-							<expression><![CDATA[$F{tipo}]]></expression>
-						</element>
-					</detailCell>
-					<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column5"/>
-				</column>
-				<column kind="single" uuid="ec18d27d-7c76-45a2-bb14-1f501f425602" width="80">
-					<tableHeader height="30" rowSpan="1" style="Table_TH">
-						<element kind="staticText" uuid="bc76b42f-4653-4241-9037-df3d0e97a637" x="0" y="0" width="80" height="30">
-							<text><![CDATA[Creado el]]></text>
-						</element>
-					</tableHeader>
-					<detailCell height="30" style="Table_TD">
-						<element kind="textField" uuid="798f3fb1-ded0-4cc0-b564-fe0b3d2be418" x="0" y="0" width="80" height="30">
-							<expression><![CDATA[$F{creado}]]></expression>
-						</element>
-					</detailCell>
-					<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column6"/>
-				</column>
-				<column kind="single" uuid="1b01982c-a281-4d8f-b005-dfaa43ea39a0" width="78">
-					<tableHeader height="30" rowSpan="1" style="Table_TH">
-						<element kind="staticText" uuid="ff02964a-7247-46d1-bb86-c23b3dc729d0" x="0" y="0" width="78" height="30">
-							<text><![CDATA[Editado el]]></text>
-						</element>
-					</tableHeader>
-					<detailCell height="30" style="Table_TD">
-						<element kind="textField" uuid="bc2fcae5-ce14-43ef-bc9b-df60a27d603d" x="0" y="0" width="78" height="30">
-							<expression><![CDATA[$F{modificado}]]></expression>
-						</element>
-					</detailCell>
-					<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column7"/>
-				</column>
-			</component>
-			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
-			<property name="com.jaspersoft.studio.table.style.table_header" value="Table_TH"/>
-			<property name="com.jaspersoft.studio.table.style.column_header" value="Table_CH"/>
-			<property name="com.jaspersoft.studio.table.style.detail" value="Table_TD"/>
-			<property name="com.jaspersoft.studio.components.autoresize.next" value="true"/>
+<jasperReport name="ReporteMaquinarias" language="java" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="a9c22cb6-ccd0-416e-8352-078bcebfa69e">
+	<parameter name="Titulo" class="java.lang.String"/>
+	<parameter name="LogoPath" class="java.lang.String"/>
+	<field name="nombre" class="java.lang.String"/>
+	<field name="tiempoEstimadoDeUso" class="java.lang.String"/>
+	<field name="costoPorTiempoDeUso" class="java.lang.Double"/>
+	<field name="costoTotal" class="java.lang.Double"/>
+	<field name="tipoMaquinaria" class="java.lang.String"/>
+	<title height="79" splitType="Stretch">
+		<element kind="textField" uuid="76da3f17-2e02-45d9-9859-f3432bb4e7b2" x="0" y="0" width="802" height="30" fontSize="16.0" bold="true" hTextAlign="Center" vTextAlign="Middle">
+			<expression><![CDATA[$P{Titulo}]]></expression>
 		</element>
-		<element kind="staticText" uuid="1aee3594-6858-4dcd-9ca1-868be9eebde2" x="560" y="120" width="201" height="21">
-			<text><![CDATA[Cantidad de Maquinarias por tipo]]></text>
-		</element>
-		<element kind="chart" chartType="pie" uuid="4b5769bc-f46d-4025-be17-92ba2cf5ada5" x="550" y="130" width="252" height="221" evaluationTime="Report">
-			<dataset kind="pie">
-				<datasetRun uuid="2d363a6a-067a-44ea-be74-5ca7ca748da3" subDataset="clientesBarra">
-					<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
-				</datasetRun>
-				<series>
-					<keyExpression><![CDATA[$F{nombre}]]></keyExpression>
-					<valueExpression><![CDATA[$F{cantidad}]]></valueExpression>
-				</series>
-			</dataset>
-			<plot>
-				<itemLabel/>
-			</plot>
-		</element>
-	</background>
-	<title height="94" splitType="Stretch">
-		<element kind="staticText" uuid="0dae0af3-dd1d-4b42-b346-386af21f0689" x="336" y="65" width="449" height="29" fontSize="22.0" bold="false" hTextAlign="Right" style="SubTitle">
-			<text><![CDATA[Reporte de Maquinarias\]]></text>
-		</element>
-		<element kind="frame" uuid="83f5e806-cc04-4161-87a9-07633f604bc1" mode="Opaque" x="-20" y="0" width="822" height="65" forecolor="#006699" backcolor="#006699">
-			<element kind="staticText" uuid="f5cd9ee0-5caa-4e48-8946-c7e84d82a845" x="231" y="0" width="578" height="65" fontSize="54.0" bold="false" hTextAlign="Right" style="Title">
-				<text><![CDATA[MAQUINARIAS]]></text>
-			</element>
+		<element kind="image" uuid="f397d659-419b-427c-b1d1-13b565656ad0" x="0" y="0" width="50" height="50">
+			<expression><![CDATA[$P{LogoPath}]]></expression>
 		</element>
 	</title>
-	<pageHeader splitType="Stretch"/>
-	<columnHeader height="14" splitType="Stretch">
-		<element kind="frame" uuid="2a3d298d-90eb-4db1-919a-c9b2ed28c222" x="227" y="0" width="575" height="14"/>
+	<columnHeader height="30">
+		<element kind="staticText" uuid="9eb54fce-7c11-4e22-a051-5d4a966a865e" x="0" y="0" width="160" height="20" bold="true">
+			<text><![CDATA[Nombre]]></text>
+		</element>
+		<element kind="staticText" uuid="5de4acff-1a4e-406d-a430-219be9448ca7" x="160" y="0" width="160" height="20" bold="true">
+			<text><![CDATA[Tiempo Est. Uso]]></text>
+		</element>
+		<element kind="staticText" uuid="4b463688-428e-49be-8850-18b4c0397b5e" x="320" y="0" width="160" height="20" bold="true">
+			<text><![CDATA[Costo por Tiempo (Bs.)]]></text>
+		</element>
+		<element kind="staticText" uuid="fabd98d7-f4c6-45a7-a83f-50c45ca9cf82" x="480" y="0" width="160" height="20" bold="true">
+			<text><![CDATA[Costo Total (Bs.)]]></text>
+		</element>
+		<element kind="staticText" uuid="24065f03-01df-4515-81f2-cbb1445369dd" x="640" y="0" width="160" height="20" bold="true">
+			<text><![CDATA[Tipo]]></text>
+		</element>
 	</columnHeader>
 	<detail>
-		<band height="15" splitType="Stretch">
-			<element kind="line" uuid="ad4e998c-7071-4467-b7fa-4441cc53d3f6" positionType="FixRelativeToBottom" x="227" y="14" width="575" height="1"/>
-			<element kind="frame" uuid="822bafe9-34ee-4b4f-aa76-3eae029c4911" x="227" y="0" width="575" height="14"/>
-			<property name="com.jaspersoft.studio.layout"/>
+		<band height="20">
+			<element kind="textField" uuid="4886f01d-170b-449c-ba8f-63a20b1f9012" x="0" y="0" width="160" height="20">
+				<expression><![CDATA[$F{nombre}]]></expression>
+			</element>
+			<element kind="textField" uuid="4235a2f3-02f2-4f79-9861-c4bec4036765" x="160" y="0" width="160" height="20" pattern="#,##0.00">
+				<expression><![CDATA[$F{tiempoEstimadoDeUso}]]></expression>
+			</element>
+			<element kind="textField" uuid="10b52e56-9415-4476-8356-dbf8f521ecac" x="320" y="0" width="160" height="20" pattern="Bs. #,##0.00">
+				<expression><![CDATA[$F{costoPorTiempoDeUso}]]></expression>
+			</element>
+			<element kind="textField" uuid="7f4e8489-ba75-4bc9-807b-09ad138600e2" x="480" y="0" width="160" height="20" pattern="Bs. #,##0.00">
+				<expression><![CDATA[$F{costoTotal}]]></expression>
+			</element>
+			<element kind="textField" uuid="6c00a0ad-a857-4b28-810a-bfa1471dfc01" x="640" y="0" width="160" height="20">
+				<expression><![CDATA[$F{tipoMaquinaria}]]></expression>
+			</element>
 		</band>
 	</detail>
-	<columnFooter height="7" splitType="Stretch">
-		<element kind="line" uuid="c23ffbf7-1928-41f8-ade3-5930d9a4871d" positionType="FixRelativeToBottom" x="0" y="3" width="555" height="1">
-			<pen lineWidth="0.5" lineColor="#999999"/>
+	<pageFooter height="30">
+		<element kind="textField" uuid="3d6f6154-4e81-450c-bf18-e6558919a773" x="301" y="0" width="100" height="30" hTextAlign="Right">
+			<expression><![CDATA["Página " + $V{PAGE_NUMBER}]]></expression>
 		</element>
-	</columnFooter>
-	<pageFooter height="16" splitType="Stretch">
-		<element kind="frame" uuid="6f4fe8ef-88ca-4d5d-b46a-054826bb7893" mode="Opaque" x="2" y="0" width="800" height="16" forecolor="#D0B48E" backcolor="#006699">
-			<element kind="textField" uuid="970781d6-87a0-4d3d-a07b-5ae173a1317a" x="753" y="0" width="40" height="16" forecolor="#FFFFFF" fontName="Arial" fontSize="12.0" evaluationTime="Report" bold="false" vTextAlign="Middle" style="Column header">
-				<expression><![CDATA[" " + $V{PAGE_NUMBER}]]></expression>
-			</element>
-			<element kind="textField" uuid="42664b34-c87b-42f8-911b-bd9c2ab9111e" x="673" y="0" width="80" height="16" forecolor="#FFFFFF" fontName="Arial" fontSize="12.0" bold="false" hTextAlign="Right" vTextAlign="Middle" style="Column header">
-				<expression><![CDATA["Page "+$V{PAGE_NUMBER}+" of"]]></expression>
-			</element>
-			<element kind="textField" uuid="06b3d6e8-b4a5-4251-b1fb-f640689933e8" x="2" y="0" width="197" height="16" forecolor="#FFFFFF" fontName="Arial" fontSize="12.0" pattern="EEEEE dd MMMMM yyyy" bold="false" vTextAlign="Middle" style="Column header">
-				<expression><![CDATA[new java.util.Date()]]></expression>
-			</element>
+		<element kind="textField" uuid="fde43fc5-8680-497c-84ba-b93d6f116657" x="401" y="0" width="100" height="30" evaluationTime="Report" hTextAlign="Left">
+			<expression><![CDATA[" de " + $V{PAGE_NUMBER}]]></expression>
 		</element>
 	</pageFooter>
-	<summary splitType="Stretch"/>
 </jasperReport>
